# PicoDVI-N64

./: Readme.md
.github/workflows/: 10_build.yml
software/apps/: CMakeLists.txt
software/apps/colour_terminal_audio/: CMakeLists.txt  audio.h  main.c
software/apps/n64/: CMakeLists.txt  joybus.c  joybus.h  joybus.pio  main.c  n64.pio
software/include/: common_dvi_pin_configs.h
software/libdvi/: data_packet.c  dvi.c  dvi.h
